[package]
name = "exampleRbatis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = "1.5"
serde = { version = "1", features = ["derive"] }
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-sqlite = { version = "0.1" }
rbdc-mysql={version="0.1"}
rbdc-pg={version="0.1"}
rbdc-mssql={version="0.1"}
